[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formunauts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136",
    "geopy>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
